--- a/translation/04_第四章.md
+++ b/translation/04_第四章.md
@@ -318,27 +318,27 @@ $$distance = \sqrt{{(x_1 - x_2})^2 + {(y_1 - y_2)}^2}$$
 
 ### 4.2.2 设计
 
-The designer must decide how many and what class of parameters are required for a function. In this example, four values are needed to represent the two input points (x1, y1, x2, and y2). Th e best class of parameters is double to allow points such as 5.62 and -9.864. The best return type is double. With the square root function involved, double helps return precise answers. A good function name is distance—it describes what the function does. This leads to a function heading with a return type of double, a function name of distance, and four descriptively named double parameters.
+作为设计者，我们必须要确定函数需要多少参数以及这些参数的类型。在当前这个示例中，我们需要四个值来表示两个点（分别命名为`x1`、`y1`、`x2`、`y2`）。这些形参最合适的类型应该是`double`（即5.62、-9.864这样的值）。另外，函数返回值最合适的类型也是`double`，因为我们的计算将涉及到平方根函数，`double`类型有助于返回较为精确的答案。最后，该函数将被命名为`distance`，这个函数名很清晰地说明了这个函数的功能。总结一下，这个函数的头信息应该是：返回值类型为`double`、函数名为`distance`、四个具有描述性名称的`double`类型的形参。具体如下：
 
 ```C++
 double distance(double x1, double y1, double x2, double y2)
 // post: Return distance between two points (x1, y1) and (x2, y2)
 ```
 
-Now, within the body of the function (the block), the parameters x1, y1, x2, and y2 can be used in the distance formula to compute the result.
+接下来，在函数体内（即之前提到的语句块），我们要将`x1`、`y1`、`x2`、`y2`这四个形参代入距离计算公式，计算出结果：
 
 ```C++
 result = sqrt(pow((x1 - x2), 2) + pow((y1 - y2), 2));
 ```
 
-### 4.2.3 IMPLEMENTATION
+### 4.2.3 实现
 
-The following program puts this all together with a main function written exclusively to test the function (a test driver):
+在下面的程序中，除了上述所有内容的实现，我们还专门为其编写了一个用作测试函数的`main`函数（即测试驱动程序）：
 
 ```C++
 // Call distance four times
-#include <iostream> // For cout
-#include <cmath> // For sqrt and pow
+#include <iostream>    // For cout
+#include <cmath>       // For sqrt and pow
 using namespace std;
 
 double distance(double x1, double y1, double x2, double y2) {
@@ -363,7 +363,7 @@ int main() {
 }
 ```
 
-**Output**
+**程序输出**
 
 ```shell
 (1.0, 1.0) (2.0, 2.0): 1.41421
@@ -372,7 +372,7 @@ int main() {
 (0.0, 0.0) (0.0, 0.0): 0
 ```
 
-Argument/parameter associations are analogous to program input. For example, in the second call to distance, the four values are first copied as input to the function distance.
+实参与形参之间的关联配对操作与程序的输入操作非常类似。以上述代码中对`distance`函数的第二次调用为例，作为输入，以下四个值会这样被复制给`distance`函数：
 
 ```C++
 double distance(x1,  y1,  x2,  y2)
@@ -380,7 +380,7 @@ double distance(x1,  y1,  x2,  y2)
        distance(0.0, 0.0, 3.0, 4.0)
 ```
 
-Control then transfers to the function where the parameters are used to compute the distance between the two points represented by those arguments. Here is the step-by-step computation:
+接下来，控制权就被移交给了函数，它将会利用其形参计算出实参所表示的那两点之间的距离，以下是它的计算步骤：
 
 ```C++
 sqrt(pow((x1  -  x2), 2) + pow((y1  -  y2), 2))
@@ -391,19 +391,19 @@ sqrt(                  25.0                   )
                         5.0                   )
 ```
 
-The four arguments become input to the function as the system copies the value of each argument to its associated parameter. This particular mode of argument parameter association is known as *pass by value* because the values are passed to the function. When a function requires input of small objects such as double or int, write the function heading with value parameters of this form:
+这四个实参可以成为函数的输入，是因为系统会负责将四个实参的值复制给其各自所关联的形参。这种实参与形参之间的关联操作模式我们称之为*值传递（pass by value）*，因为传递到函数中的都是变量的值。当一个函数需要以`double`、`int`这样的小型对象输入时，函数头信息中的形参必须要写成以下这种形式：
 
 > *class-name identier*
 
-### 4.2.4 TESTING
+### 4.2.4 测试
 
-It is a good idea to test functions individually. The previous program did just that. It didn’t do anything else. The only purpose for this particular program was to call distance with diff erent sets of arguments and display the return results. Notice the similarity of the four calls to distance and the sample problems. The arguments are the input to the function. The return result should match the expected results.
+对函数进行分别测试是一个不错的想法。我们在上述程序中就是这样做的。该程序没有做别的，就是使用了几组不同的实参调用了目标函数，并输出显示了它的返回结果。请注意一下这四个调用与问题样例之间的比对。实参是函数的输入，返回结果应该与其预期结果相匹配。
 
-It is recommended that you test new functions with a test driver.
+建议你们也要用一个测试驱动程序来测试自己的新函数。
 
-### 4.2.5 SCOPE OF IDENTIFIERS
+### 4.2.5 标识符的域
 
-The *scope* of an identifi er is the part of a program from which an identifier can be referenced. The scope of an identifi er extends from the point of the identifi er’s declaration to the end of the block in which it is declared. Recall that a block is delimited by the left and right braces, { and }. For example, the scope of local in the following program is the function one. This local, declared in one, cannot be referenced from outside the block in which it was declared, including main.
+标识符的*域（scope）*指的是程序中可以引用到该标识符的那个部分。通常情况下，一个标识符的域会从它被声明之处开始，一直延续到该声明所在的语句块结束为止。还记得吗？语句块是以一对左右大括号`{ }`区隔开的语法单元。例如在下面的程序中，`local`的域应该就是`one`函数。这个`local`变量是在`one`函数中被声明的，其语句块以外的地方是无法引用该标识符的，包括`main`函数。
 
 ```C++
 // Illustrate the scope of an object
@@ -431,7 +431,7 @@ int main() {
 }
 ```
 
-When a variable is declared outside of a block—as in the case of maxValue—its scope begins at the point of declaration and extends to the end of the fi le. Identifi ers declared in a block can be referenced only from within that block. Th ese are *local* identifiers. Identifi ers declared outside of a block (such as maxValue) are said to be global. *Global identifi ers* may be referenced from any subsequent part of the fi le after its declaration, unless that identifier is declared again (redeclared) within another block. In this case, the identifi er that was declared first becomes hidden from the block in which it is redeclared. Since many blocks often exist within one program, determining the scope of an object can be somewhat complicated. For example, try to predict the output of the following program, which includes three diff erent declarations of the int variable identier:
+当变量被声明在语句块之外时（譬如上面的`maxValue`），该变量的域就会从其被声明之处开始，一直延续到该文件的末尾。声明在语句块内的标识符只能在该语句块内被引用，这些标识符被称之为*局部*标识符。而声明在语句块之外的标识符（像`maxValue`这样的）则被称之为*全局*标识符，全局标识符可以被其在文件中被声明的位置之后的任意部分引用，除非另有语句块也声明了这个标识符（也就是该标识符被重新声明了）。在后一种情况中，先声明的标识符黑被后来的重新声明隐藏。由于同一个程序中会存在多个语句块，所以确定一个对象的域有时候会是件复杂的事。例如在下面的程序中，我们声明了三个不同的int变量`identier`，你可以试着猜测一下它会输出什么:
 
 ```C++
 // This program is a tedious test of your ability to
@@ -448,7 +448,7 @@ void one() {
 }
 
 void two() {
-    int identi er = 2; // local to two()
+    int identier = 2; // local to two()
     cout << "identier in two(): " << identier << endl;
 }
 
@@ -461,7 +461,7 @@ int main() {
 }
 ```
 
-**Output**
+**程序输出**
 
 ```shell
 identier in one(): 1
@@ -469,9 +469,9 @@ identier in two(): 2
 identier in main(): 3
 ```
 
-When the function one is called, the global const int identier = 1 is referenced. Th is global identi er can be referenced from within any function that does not declare another identifi er named identi er. Therefore, the identi er that was declared fi rst and initialized to 1 is known (can be referenced) from one even though it was not declared inside one. But when a reference is made to identier in function two, the global identi er is hidden because of the local identi er. To this point in program execution, one has caused the output 0, and two has caused 2 to be displayed. The final statement in main references the identier local to main—this identi er is initialized as 3.
+如你所见，当函数`one`被调用时，它引用的是全局声明`global const int identier = 1`。这个全局的`identier`可以在所有没有另行声明`identier`这个标识符名的函数中被引用。因此，`one`函数尽管自身内部并没有声明`identier`。但它可以引用第一个被声明的，初始值为1的`identier`。 但在函数`two`引用`identier`这个标识符时，由于全局的`identier`就被局部的`identier`隐藏掉了，当程序出现执行到此处时，函数`one`的输出是1，函数`two`的输出是2。同样地，`main`函数最后一条语句所引用的`identier`也应该是`main`声明的局部`identier`，其初始值为3。
 
-Typically, a function will have one or more variables declared at the beginning of the block. These variables are said to be local to the function because they may be referenced only from within the function. The same protection applies to the parameters of a function. Parameters are local variable declarations declared inside ( and ), rather than inside the function block. Parameters are assigned values passed to the function. Parameters can only be used inside the function block. The restriction provides safekeeping for the local objects so they are not accidentally altered from some other portion of a program.
+通常情况下，函数都会在其语句块开头声明一个或多个变量。这些变量都属于局部变量，因为它们只能在该函数内部被引用。同样的限制也被引用到了函数的形参上。函数的形参是一种声明在`( )`之间的局部变量，它并不位于函数的语句块内。这种限制为局部变量提供了一种安全保护，能确保其不会意外地被程序的其它部分修改。
 
 ```C++
 void f1(double x) {
@@ -487,10 +487,9 @@ int main() {
 }
 ```
 
-**SELF-CHECK**
+**自检题**
 
-4-6 Use the partial program shown below to determine the functions from which each of the following identifiers may be referenced. cin and cout are initialized in iostream so they are known after #include
- <iostream>.
+4-6 请根据下面给出的部分程序，判断这些函数是否可引用以下标识符。其中，`cin`和`cout`的初始化在`iostream`文件中已经完成，因此在`#include <iostream>`之后，也都属于已知标识符了。
 
 ```C++
 // cout b cin MAX c f1 a d f2 main e
@@ -513,11 +512,11 @@ int main() {
 }
 ```
 
-4-7 Name two things that may be declared local to a function.
+4-7 请命名一下函数中可以被声明为局部变量的两种东西。
 
-4-8 If a variable is declared outside of a function, from where may it be referenced?
+4-8 如果一个变量被声明在了一个函数之外，在哪些地方可以引用它？
 
-### 4.2.6 SCOPE OF FUNCTION NAMES
+### 4.2.6 函数名的域
 
 Now what about function names? After all, they too are identifiers. What is their scope? Like cin and cout, the scope of functions in an included fi le like cmath also extends to the end of their own file and any fi le with #include <cmath>. So functions such as sqrt, pow, ceil, and fabs may be called from within any block unless the function name is re-declared to be something else.
 
@@ -688,7 +687,7 @@ void swap(int parmOne, int parmTwo) {
 int main() { 
     argOne    89
     argTwo    76
-                 Values in main are not aff ected when their values are
+                Values in main are not aff ected when their values are
                 “passed by value”.
 }
 ```
@@ -1149,4 +1148,3 @@ This should be 0 or very close? nan
 3x^2 + 4x + 2 when x is nan should be 0
 This should be 0 or very close? nan
 ```
-
