--- a/translation/04_第四章.md
+++ b/translation/04_第四章.md
@@ -518,13 +518,13 @@ int main() {
 
 ### 4.2.6 函数名的域
 
-Now what about function names? After all, they too are identifiers. What is their scope? Like cin and cout, the scope of functions in an included fi le like cmath also extends to the end of their own file and any fi le with #include <cmath>. So functions such as sqrt, pow, ceil, and fabs may be called from within any block unless the function name is re-declared to be something else.
+那么，函数名的情况又如何呢？它们毕竟也是标识符啊，它们的域是什么呢？和`cin`和`cout`对象一样，在被包含文件（譬如`cmath`文件）中的这些函数名的域是从该文件开始，一直到执行了`#include <cmath>`指令的文件末尾。因此`sqrt`、`pow`、`ceil`和`fabs`这些函数，都可以在所有的语句块中被调用，除非这些函数名被重新声明成了其他东西。
 
-### 4.2.7 GLOBAL IDENTIFIERS
+### 4.2.7 全局标识符
 
-The problems presented so far are not relatively complex. They are certainly not large. You have probably been working pretty much on your own. However, when programs get large with a team, practice caution with scope.
+到目前为止，我们遇到的问题都不算复杂，它们的规模都不算大，相信大家在自己的工作中实际上或多或少都已经接触过了。但是，当问题的规模达到一个团队的级别时，我们对于域的使用就必须要谨慎了。
 
-Global identifiers are known everywhere after they are declared. This opens them up for accidental alteration from anywhere in a very large program. It is diffi cult to ensure that no one will accidentally modify an object at the wrong time. So try to get in the habit of using local objects everywhere possible. This means you use parameters between ( and ) and objects between { and }. For example, main declares localX and localY locally.
+由于全局标识符在被声明之后，对于程序中所有的地方都是可见的，这意味着它们是完全开放的，我们可以在一个大型程序中的任何一个地方修改它们。这样一来，就很难保障团队中没有人会在错误的时间意外地修改了某个对象。所以我们认为，尽量使用局部变量是大家需要养成的一个好习惯。也就是说，我们应该尽量使用`( )`之间定义的形参和`{ }`之间定义的对象来做事。例如下面`main`函数中的`localX`和`localY`就属于局部变量：
 
 ```C++
 int main() {
@@ -533,7 +533,7 @@ int main() {
 }
 ```
 
-If you need to move data between functions, pass them as arguments. This means you must declare parameters rather than having some global x.
+如果我们需要在函数之间搬运数据，就需要使用实参来传递，这样的话我们就必须要在函数中声明相应的形参，这比使用全局变量`x`来得好：
 
 ```C++
 double f(double x) { // x is local to f
@@ -542,7 +542,7 @@ double f(double x) { // x is local to f
 }
 ```
 
-If you need a value in many places throughout a program, make it const.
+如果我们确实需要一个贯穿整个程序，在许多地方都会用到的值，建议将其声明成`const`对象：
 
 ```C++
 #include <iostream>
@@ -551,7 +551,7 @@ using namespace std;
 const int MAXIMUM_ENTRIES = 100; // ... a large program with many functions may follow
 ```
 
-On the other hand, C++ often uses global identifi ers. Consider the fact that after including <iostream>, cout is known everywhere, assuming using namespace std; is written before cout is referenced (left column following) or cout is qualified with std:: (right column).
+然而从另一方面来说，我们在C++中也确实经常会用到全局标识符。譬如在引入<iostream>这个头文件之后，`cout`就是一个对于任何地方都可见的对象。当然，前提是我们做了`using namespace std;`这条声明，免去了在引用`cout`时要为其加上`std::`前缀的麻烦，否则，我们每次都要在`cout`的前面（也就是它的左边）加上`std::`这个限定词。
 
 ```C++
 #include <iostream>
@@ -592,28 +592,28 @@ int main() {
 }
 ```
 
-In effect, using namespace std; makes cout a global identifier. Is this okay? Well, a lot of computer scientists believe so. There is usually only one console, so any output to cout will go to the same console, no matter which function sends output to it.
+实质上，就是`using namespace std;`这个声明将`cout`变成了一个全局标识符。这样做是好的吗？好吧，确实有大量的计算机科学家是这样认为的。因为控制台环境通常都是唯一的，`cout`的任何输出都只能被传递给同一个控制台环境，这种情况下我们无需关心具体是哪个函数发出的输出。
 
-## 4.3 void FUNCTIONS & REFERENCE PARAMETERS
+## 4.3 void函数与引用型形参
 
-The keyword void is used as the return type of functions that do not return anything. Instead of returning values back to the client, void functions are often employed to modify the state of the object(s) passed to them. Th is section shows a void function called swap, which modifies two arguments. A function must use a reference parameter—with & added—to modify the state of the object(s) in the function call. Here is the general form.
+当我们将函数的返回值类型声明成关键字`void`时，就表示该函数不返回任何东西。与返回某些值给客户端的函数不同的是，`void`函数通常会改变传递给它的对象的状态。在本节，我们可以来演示一下如何实现一个叫做`swap`的`void`函数，它对自己的两个实参做了修改。首先，一个函数要想在其调用过程中修改其实参对象的状态，它就必须要使用引用型形参（reference parameter）——即在声明时加上`&`。其通用格式如下：
 
-**General Form 4.4** *Reference Parameter*
+**通用格式 4.4**：*引用型形参*
 
 > *class-name* & *identier*
 
-**Examples of reference parameters in function headings**
+**示范在函数头信息中声明引用型形参**
 
 ```C++
-void swap(double & parameterOne, double & parameterTwo) void
-changeFormat(ostream & cout)
+void swap(double & parameterOne, double & parameterTwo)
+void changeFormat(ostream & cout)
 ```
 
-A change to a reference parameter (with &) also modifies the associated argument. Th e parameter name is a reference to—memory location of—the associated argument.
+（使用＆声明的）引用型形参上的变化会修改其所关联的实参，其参数名代表的是一个内存位置，实际上是对该形参所关联实参的引用。
 
-Although parameters typically obtain input from the caller, they can sometimes establish a stronger connection between argument and parameter. In this first example of reference parameter usage, the swap function must modify two objects. Since only one value can be returned through a return statement, the function requires something besides the return statement to communicate more than one value back to the caller. Th is is accomplished when the special symbol & is placed before the parameter name in the function heading. Instead of receiving a copy of the argument, the function receives the memory location or reference to that argument.
+虽然函数的形参通常得从它的调用者获取输入，但形参与实参之间有时候会建立起更强的联系。在下面第一个关于引用型形参的用法示范中，由于`swap`函数必须修改两个对象，而通过`return`语句只能返回一个值，因此该函数需要返回给调用方的值是比`return`语句要多的。当我们在函数头信息中给各形参名前面加上`＆`这个特殊符号时，该函数节后的就是实参内存位置的引用，而不是实参的复制品了。
 
-When a change is made to a reference parameter, it will change the same object referenced by the argument. Th is is because the parameter and the argument are pointing to the same object in memory. For example, in the following program, when the swap function alters the parameters parmOne and parmTwo, the arguments argOne and argTwo are also pointing to that same modifi ed object:
+当引用型形参上发生变更操作时，它将会引起被引用实参对象的同样变更。这是因为该函数的形参和实参指向的是内存中的同一对象。例如在下面的程序中，当`swap`函数修改`parmOne`和`parmTwo`这两个形参时，实参argOne和argTwo也指向了同一个修改过的对象：
 
 ```C++
 // Notice the reference symbol & is in front of parmOne
@@ -643,66 +643,64 @@ int main() {
 }
 ```
 
-**Output**
+**程序输出**
 
 ```shell
   89             76
   76             89
 ```
 
-If the ampersands (&) are removed from the program above, no change is made to the arguments in main. In this case, the values of argOne and argTwo would be passed by value, not by reference. Without the reference symbol &, the values of parmOne and parmTwo are changed locally, within swap only. Th e values of the associated arguments in main are unaff ected because they are diff erent objects.
+如果我们将上述程序中的＆符号拿掉，`main`中的实参就不会发生任何变化。因为在这种情况下，`argOne`和`argTwo`执行的是按值传递，而不是引用传递。也就是说，在没有参考符号＆的情况下，`parmOne`和`parmTwo`中值的变化是局部性的。只在`swap`函数中有效，而其在`main`中所关联的实参则不受影响，因为它们是不同的对象。
 
-The following fi gures illustrate the diff erence between reference and value parameters.
+下面，我们用一张表来说明一下引用兴趣形参与值类型形参之间的差异。
 
-**Reference parameters:** *argument and parameter reference the same object*
+**引用型形参**：*实参与形参引用的是同一个对象*
 
 ```C++
 parmOne = address of argOne and parmTwo = address of argTwo
 
 void swap(int & parmOne, int & parmTwo) {
     parmOne
-    parmTwo 89-  76  parmOne points to the memory location of argOne and then changes contents from 89           76-  89  to 76 in swap. This affects the same object pointed to by argOne.
+    parmTwo 89-  76  由于parmOne与argOne指向的是相同的内存位置，所以
+            76-  89  在swap函数中将89改成76也会同步影响到argOne所指的对象。
 
 }
 
 int main() {
     argOne
-    argTwo           parmTwo points to the memory location of argTwo and then changes contents from 76                    to 89 in swap. Th is affects the same object pointed to by argTwo.
+    argTwo           由于parmTwo与argTwo指向的是相同的内存位置，所以
+                     在swap函数中将76改成89也会同步影响到argOne所指的对象。
 
 }
 ```
 
-**Value parameters:** *a change to the parameter does not change the associated argument*
+**值类型形参**：*形参上的变化不会改变其关联实参的值*
 
 ```C++
 parmOne = 89 (value of argOne) and parmTwo = 76(value of argTwo)
 
 void swap(int parmOne, int parmTwo) {
-    parmOne   89- 76    parmTwo Since values are passed to the swap function, when the
-              76- 89    swap occurs locally, it does not aff ect the variables in a 
-                        different function.
-
+    parmOne   89- 76    由于parmTwo中的值是以按值传递的方式传入swap函数的，
+              76- 89    所以swap中的局部操作不会影响到其他不同的函数。
 }
 
-int main() { 
+int main() {
     argOne    89
     argTwo    76
-                Values in main are not aff ected when their values are
-                “passed by value”.
+                        由于是这里的参数是“按值传递”的，
+                        所以main中的值不受任何影响。
 }
 ```
 
-Because a change to a reference parameter changes the argument, the argument must be a variable. Using a literal value or larger expression results in a compile time error.
-
-Values in main are not aff ected when their values are
+由于引用型形参上的变化会同步引起实参的变化，所以实参必须是一个变量，如果在这里使用字面常量表达式来调用函数，会导致编译时错误。
 
 ```C++
 swap(89, 76); // Error: Argument must be a variable
 ```
 
-**SELF-CHECK**
+**自检题**
 
-4-9 Write the values of arg1 and arg2 at the moment when return 0; executes.
+4-9 请写出下面各段代码在执行到`return 0;`时`arg1`和`arg2`的值。
 
 * a.
     ```C++
@@ -737,17 +735,21 @@ swap(89, 76); // Error: Argument must be a variable
     }
     ```
 
-## 4.4 CONST REFERENCE PARAMETERS
+## 4.4 const的引用型形参
 
-You have now seen two of the three parameter passing modes in C++:
+到目前为止，在C++的以下三种形参传递模式中，我们已经介绍了其中的两种：
 
-1. value parameters—for passing the values of small objects such as int
-2. reference parameters—to allow a function to modify the state of one or more arguments
-3. const & (reference) parameters—for safety and effi ciency
+1. 值传递形参 - 这类形参主要用于传递`int`这类小型对象的值。
+2. 引用型形参 - 这类形参允许在被调用函数中同步修改一个或多个实参的状态。
+3. `const＆`（引用）型形参 - 这类形参主要考虑的是参数传递的安全和效率。
 
 A const reference parameter is typically used to pass a “big” object that is not to be modifi ed by the function. A big object is one that requires a lot of memory, a very large string for example. To understand why programmers pass large objects by const reference, consider what happens when arguments are passed into functions.
 
+const参数通常用于传递不被函数修改的“大”对象。一个大对象是需要大量内存的对象，例如一个非常大的字符串。要理解为什么程序员通过const引用传递大对象，请考虑将参数传递给函数时会发生什么。
+
 When passed by value, the entire object is copied into another variable of the same size in the function, which requires twice the memory. For reference parameters, the address of the object is copied to the function, which is only four bytes of memory. In this case, the argument and the parameter reference the same object. For const & parameters, the address of the object is copied to the function, again only four extra bytes of memory needed. With const, any attempt to modify the parameter in the function will be flagged as an error by the compiler. Th e const prevents accidental changes to the argument. The programmer adds const to avoid the bug of unknown modifi cation of an object in a diff erent scope.
+
+当按值传递时，整个对象被复制到函数中相同大小的另一个变量中，这需要两倍的内存。对于参考参数，对象的地址被复制到函数，该函数只有四个字节的内存。在这种情况下，参数和参数引用相同的对象。对于const和参数，对象的地址被复制到函数中，同样只需要四个额外的内存字节。对于const，任何修改函数中参数的尝试都将被编译器标记为错误。这个const可以防止对参数的意外更改。程序员添加const以避免在不同范围内对象的未知修改错误。
 
 | Pass by Value int f1(int j) | Pass by Reference int f2(string & b) | Pass by const Reference void f3(const int & n) |
 |------------------------------|-------------------------------|-------------------------------|-----------------|
@@ -818,7 +820,7 @@ int main() {
 
 It should be noted that only a few objects will be passed by const reference until later. So you will only occasionally see a big object passed by const reference in the next several chapters. Also, value parameters will be more common than reference parameters.
 
-## CHAPTER SUMMARY
+## 本章小姐
 
 * Functions perform some well-defi ned services and can have two-way communication through argument/parameter associations and the return statement. Th e client code supplies input values to the function as arguments. Th e result is returned via the return statement.
 * There are several new implementation issues related to functions such as the scope of identi-fi ers:
@@ -837,7 +839,7 @@ It should be noted that only a few objects will be passed by const reference unt
   * Reference parameters (with &) must be used if the intention is to modify the associated argument—a change to a reference parameter alters the object reference by the argument. A change to a value parameter does not.
   * const reference parameters are used to pass large objects. Instead of consuming extra bytes of memory and copying that memory, the address is copied—because of &. However, the safety of value parameters is ensured by making the parameter const.
 
-## EXERCISES
+## 练习题
 
 1. How many statements may be written in a block delimited by { }?
 
