--- a/translation/04_第四章.md
+++ b/translation/04_第四章.md
@@ -739,45 +739,41 @@ swap(89, 76); // Error: Argument must be a variable
 
 到目前为止，在C++的以下三种形参传递模式中，我们已经介绍了其中的两种：
 
-1. 值传递形参 - 这类形参主要用于传递`int`这类小型对象的值。
-2. 引用型形参 - 这类形参允许在被调用函数中同步修改一个或多个实参的状态。
-3. `const＆`（引用）型形参 - 这类形参主要考虑的是参数传递的安全和效率。
+1. 值传递形参 —— 这类形参主要用于传递`int`这类小型对象的值。
+2. 引用型形参 —— 这类形参允许在被调用函数中同步修改一个或多个实参的状态。
+3. `const＆`（引用）型形参 —— 这类形参主要考虑的是参数传递的安全和效率。
 
-A const reference parameter is typically used to pass a “big” object that is not to be modifi ed by the function. A big object is one that requires a lot of memory, a very large string for example. To understand why programmers pass large objects by const reference, consider what happens when arguments are passed into functions.
+`const`的引用型形参通常主要用来传递一些不允许被调用函数修改的“大型”对象。大型对象通常指的是会占用大量内存的对象，譬如非常大的字符串等。至于为什么程序员要通过const的引用来传递大型对象，我们首先要理解当实参被传递给函数时，具体会发生哪些事。
 
-const参数通常用于传递不被函数修改的“大”对象。一个大对象是需要大量内存的对象，例如一个非常大的字符串。要理解为什么程序员通过const引用传递大对象，请考虑将参数传递给函数时会发生什么。
+如果执行的是按值传递，整个目标对象都会被复制到函数中另一个相同大小的变量中，这块数据所需要的内存就等于翻了一倍。而如果是引用型形参的话，我们就只需将目标对象的地址复制给函数即可。在这种情况下，该函数就只需要四个字节的内存。因为这是实参和形参引用的是相同的对象。而如果是`const &`形参的话，目标对象的地址一样会被复制给函数，该函数同样只需要增加四个字节的内存，但由于形参被声明成了`const`，函数中任何尝试修改形参值的动作都会被编译器标记为错误。也就是说，我们可以用`const`来防止被调用函数对其实参的意外更改。程序员们可以通过添加`const`限定词来避免相关对象因不同域中不可预知的修改而产生的bug。
 
-When passed by value, the entire object is copied into another variable of the same size in the function, which requires twice the memory. For reference parameters, the address of the object is copied to the function, which is only four bytes of memory. In this case, the argument and the parameter reference the same object. For const & parameters, the address of the object is copied to the function, again only four extra bytes of memory needed. With const, any attempt to modify the parameter in the function will be flagged as an error by the compiler. Th e const prevents accidental changes to the argument. The programmer adds const to avoid the bug of unknown modifi cation of an object in a diff erent scope.
+| 按值传递`int f1(int j)` | 引用传递`int f2(string & b)` | `const`引用传递`void f3(const int & n)` |
+|------------------------|-----------------------------|---------------------------------------|
+| 这种方式需要获得足够的内存来存储整个目标对象，后者所有的字节都会被复制到函数中，而该函数对形参做的任何修改都不会影响到其实参。| 这种方式会用四个字节的内存来存储目标对象的地址，后者的地址将会被复制给函数，当我们需要对函数的实参进行同步修改时可以使用这种方式，这也是非常有效率的方式。| `const`表示的是函数实参的内容是包括修改的，任何企图修改`n`的操作都会导致编译时错误，这是一种安全且高效的传递方式。|
+| `f1`无法修改实参的状态。| `f2`可以修改实参的状态。| `f3`无法修改实参的状态，但这种传递方式的销效率很好。|
 
-当按值传递时，整个对象被复制到函数中相同大小的另一个变量中，这需要两倍的内存。对于参考参数，对象的地址被复制到函数，该函数只有四个字节的内存。在这种情况下，参数和参数引用相同的对象。对于const和参数，对象的地址被复制到函数中，同样只需要四个额外的内存字节。对于const，任何修改函数中参数的尝试都将被编译器标记为错误。这个const可以防止对参数的意外更改。程序员添加const以避免在不同范围内对象的未知修改错误。
+我们选择使用`const`的引用型形参主要有两个原因。首先是执行效率——即这种方式可以让程序执行得更快。另一个因素是更好的内存利用率——即这种方式可以让函数以更小的内存存储大型对象。例如，按值传递`int`这类小心对象，需要在函数中分配四个字节的内存，然后将其整个复制过去。但如果大型对象也按值传递的话，可能就需要数千个字节了，该程序有可能会耗尽计算机上的可用内存。
 
-| Pass by Value int f1(int j) | Pass by Reference int f2(string & b) | Pass by const Reference void f3(const int & n) |
-|------------------------------|-------------------------------|-------------------------------|-----------------|
-| Grab enough memory to store the entire object and copy all bytes to the function. A change to the parameter has no effect on the argument. | Use four bytes of memory to store the address of the object and copy that address to the function. Use this when you need to modify the argument. It’s effi cient too. | const means the argument cannot be changed. Any attempt to change n results in a compile time error. Use this for effi ciency and safety. |
-| f1 ***cannot*** modify the argument’s state. | f2 ***can*** modify the argument’s state. | f3 function ***cannot*** modify the argument’s state. Th is is efficient. |
+除此之外，在按值传递的情况下，为了确保实参的每一个字节都能被复制到函数中。计算机必须要为此做大量不必要的工作。这可能会导致程序的运行速度明显变慢。而以下两种传递方式都可以让程序更有效率地使用空间（节省内存）和时间（运行速度更快）：
 
-There are two reasons to use const reference parameters. The first is efficiency—the program executes more quickly. The other consideration is better memory utilization—less memory is required to store the large object in the function. For example, passing a small object such as int by value only requires the function to allocate and then copy four bytes of memory. By contrast, one large object passed by value could require thousands of bytes. Th e program might exhaust available memory.
+1. 采用引用传递的方式传递大型对象——这种方式效率很好，但也有一定的风险。
+2. 采用传递`const`引用的方式传递大型对象——这种方式既高效又安全。
 
-Additionally, every single byte of an argument passed by value will be copied to the function. The computer has to do a lot of unnecessary work. The program might run noticeably slower. Here are two alternatives to make any program more efficient in terms of space (saves memory) and time (runs faster):
+我们会推荐尽量使用第二种传递方式。这种方式可以让程序减少很多操作。在采用按值传递时，程序必须等到每个字节都从调用者复制到函数中之后才能继续。而如果我们采用`const &`引用的传递方式的话，就只需要传递四个字节，而且在安全性上它与值传递形参的情况是一样的（即不会改变实参的状态）。当然，如果我们需要在函数中修改实参的状态的话，那就得选择带`&`符号的引用传递了。
 
-1. Pass big objects by reference—effi cient but somewhat dangerous.
-2. Pass big objects by const reference—effi cient *and* safe.
-
-The second option is recommended. The program now has much less work to do. When passed by values, the program must then wait until every single byte is copied from the caller to the function. If passed by const & reference, only four bytes are required while the safety of value parameters (cannot change the state of the argument) remains intact. Of course, if you are passing an argument to a function in order to modify the state, you must pass it by reference with &.
-
-Attempts to modify objects passed by const reference result in compile time errors. Using const is an antibugging technique that will let the compiler tell us about accidental attempts to modify the const parameter. Any function that does not modify the object may still be called—string’s length function, discussed in the next chapter, for example. However, the compiler will fl ag any attempt to call functions such as string’s insert function because as the name implies, insert adds things to a string to modify the state of the string object. You cannot assign a new value to a const parameter either.
+任何企图修改`const`引用所传递对象的操作都会导致编译时错误。`const`的使用一种纠错技术，它可以让编译器告知我们程序中所有针对`const`形参的意外修改。在这种情况下，大多数不修改对象的函数仍会继续完成调用动作——譬如`string`对象的`length`函数，我们会在下一章中讨论它们。但是，编译器也会标记出`string`对象的`insert`这一类函数的调用。而顾名思义，`insert`函数显然是要在`string`对象中添加内容的，它必然要改变该对象的状态，这时候就不能将新值赋值给一个`const`的引用型形参了。
 
 ```C++
 void addSomeStuff(const string & str) {
-    cout << str.length() << endl; // Okay
-    str.insert(5, "xtra"); // ERROR: can not modify a const parameter
-    str = "new string"; // ERROR: Can not assign to a const parameter
+    cout << str.length() << endl;   // Okay
+    str.insert(5, "xtra");          // ERROR: can not modify a const parameter
+    str = "new string";             // ERROR: Can not assign to a const parameter
 }
 ```
 
-However, when using value parameters only, you get no such error message. The argument’s object simply does not change.
+但是，如果我们这里采用的是值传递的形参，就不会收到这样的报错消息了，因为其实参对象根本不会被改变。
 
-| Changing x in f does not change y in the main function | This code results in a compile time error such as “cannot modify a const object” |
+| 在`f`函数中修改`x`，并不会改变`main`函数中`y`的值。| 这段代码会产生”无法修改const对象“这样的编译时错误。|
 |--------------------------------| ------------------------------------|
 | | |
 
@@ -801,7 +797,8 @@ int main() {         // Output:
 ```
 
 ```C++
-#include <iostream> using namespace std;
+#include <iostream>
+using namespace std;
 double f(const double & x) {
     double result;
     // An error. Good!
@@ -818,21 +815,21 @@ int main() {
 }                                                                                                    ```
 ```
 
-It should be noted that only a few objects will be passed by const reference until later. So you will only occasionally see a big object passed by const reference in the next several chapters. Also, value parameters will be more common than reference parameters.
+当然，我们以后应该会注意到通常只有少量的对象可以采用`const`引用的传递方式，在接下来的章节中，读者们只会偶尔看到使用`const` 引用的方式来传递大型对象。而且，值传递形参也会比引用型形参更常见。
 
-## 本章小姐
+## 本章小结
 
-* Functions perform some well-defi ned services and can have two-way communication through argument/parameter associations and the return statement. Th e client code supplies input values to the function as arguments. Th e result is returned via the return statement.
-* There are several new implementation issues related to functions such as the scope of identi-fi ers:
-  * All identifi ers must be declared before they can be referenced.
+* Functions perform some well-defined services and can have two-way communication through argument/parameter associations and the return statement. The client code supplies input values to the function as arguments. The result is returned via the return statement.
+* There are several new implementation issues related to functions such as the scope of identifiers:
+  * All identifiers must be declared before they can be referenced.
   * The scope of an object is limited to the block where it is declared.
-  * Some identifi ers are not declared within a block. In this case, they are global identifi -ers. Examples of global identifi ers include function sqrt after \#include <cmath>, and the global object std::cout after \#include <iostream>.
+  * Some identifiers are not declared within a block. In this case, they are global identifiers. Examples of global identifiers include function sqrt after #include <cmath>, and the global object std::cout after \#include <iostream>.
   * The scope of a parameter is limited to its function.
-  * The scope of a function begins at the function heading and continues to the end of its fi le, or the end of the fi le that included the function.
+  * The scope of a function begins at the function heading and continues to the end of its file, or the end of the file that included the function.
 * There are many details to remember when using argument/parameter associations.
   * The number of arguments used in a function call must match the number of param-eters declared in the function heading.
   * The void return type precedes the function name when no value is to be returned. You cannot return anything from a void function.
-  * When one value is to be returned from a function, a non-void return type must begin the function heading. Th e return statement must also be included in the function block. Th e expression in the return statement should be the same class as the return type.
+  * When one value is to be returned from a function, a non-void return type must begin the function heading. The return statement must also be included in the function block. The expression in the return statement should be the same class as the return type.
   * Sometimes a function needs input—that is what parameters are for. Sometimes a function must return something—that is what the return statement is for. Sometimes a function needs to modify objects in the client code—that’s what reference parameters are for.
   * The argument used in a function call should usually be the same class as its associated parameter. There are exceptions; for example, an int argument may be assigned to a double parameter with type conversion.
   * Parameters intended only to receive copies of the argument values (input parameters) should be declared as value parameters without &.
